ошибки сонара и чекстайла